--- a/test.css
+++ b/test.css
@@ -29,6 +29,7 @@ section {
     display: flex;
     justify-content:space-between;
     align-items: center;
+    padding-left: 5px;
   }
 
   .logo_section img{
