--- a/public/css/index.css
+++ b/public/css/index.css
@@ -594,8 +594,7 @@ transition: height 1.5s linear;
 main .mie_ride_service .mie_ride_service_left_main{
   width:100%;
   margin-top: 340px;
-  /* margin-bottom: 100px; */
-  position: relativ
+  position:relative;
   z-index: 100;
   background-color: #f9f9f9;
   border-radius: 30px;
